--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,8 @@ Open desktop arena, Main -> Opened Problems
 Find submitted solutions for all srms
 
 Possibly ask loew if he has srm numbers of my problems
+
+
+
+
+last 600
